--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@
           <div class="about-me">
             <h4>More About Me</h4>
             <p>
-              I currently work in development, fundraising, and marketing in the nonprofit
-              industry. I enjoy creative problem solving and making
+              Currently in consulting within the IT space. Managing internal operations, developing business
+              reporting processes, standardizing practices, and more. Previously in nonprofit industry 
+              working in fundraising, special events, WordPress and front-end development, and marketing.
+              I enjoy creative problem solving and making
               data-driven decisions.
             </p>
 
