--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <p>
               Here's an overview of technologies that I work with or enjoy
               using.
-              <a target="_blank" href="images/Resume.pdf">
+              <a target="_blank" href="images/PortfolioResume.pdf">
                 Download Resume
               </a>
             </p>
